tests/NormalTests/paczka1/fuzzy1/76133463.err
Error in line 1: i2aK A725 5,5
Error in line 2: i2aK S388 30,4
Error in line 11: 0gT A835 16,1
Error in line 6: K4cxGAVlju S388 60,4
Error in line 19: S1 A725 32,5
Error in line 20: S1 A725 2,3
Error in line 18: K4cxGAVlju A725 42,7
Error in line 17: CXi S1 79,2
Error in line 21: K4cxGAVlju S1 42,4
Error in line 16: 0gT S388 17,8
Error in line 30: S1 A835 17,0
Error in line 31: S1 A835 25,8
Error in line 33: 0gT (1 1,8
Error in line 37: S1 S388 70,1
Error in line 39: S1 S388 241,8
